<resources>
    <string name="app_name">TODO APP</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="today">TODAY</string>
    <string name="later">LATER</string>
    <string name="todo_app">TODO APP</string>
    <string name="abcdefg">ABCDEFG</string>
    <string name="rise_and_shine">Rise and Shine!</string>
    <string name="rise_shine">Rise and Shine</string>
    <string name="riseandshine">Rise and Shine!</string>
    <string name="rise">Rise and Shine!</string>
    <string name="todo">There\'s alot going on today.There a 6 todos scheduled,and the first one starts at 10 AM.</string>
    <string name="pending">Pending</string>
    <string name="pending_item">PENDING ITEMS</string>
    <string name="pending_ite">PENDING ITEMS</string>
    <string name="completed_items">COMPLETED ITEMS</string>
    <string name="pending_it">PENDING ITEMS</string>
    <string name="pending_tasks">PENDING ITEMS</string>
    <string name="text">text</string>
    <string name="completed_item">COMPLETED ITEMS</string>
    <string name="pending_items">PENDING ITEMS</string>
    <string name="to">TODO</string>
    <string name="pending_i">PENDING ITEMS</string>
    <string name="task_name">task name</string>
    <string name="date">date</string>
    <string name="pending_">PENDING ITEMS</string>
    <string name="completed_i">COMPLETED ITEMS</string>
    <string name="completed_task">completed task</string>
</resources>