<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/constraint_layout1"
    android:layout_height="match_parent"
    tools:context=".TodayFragment"
    >

   <androidx.cardview.widget.CardView
       android:layout_width="match_parent"
       android:layout_height="240dp"
       app:cardBackgroundColor="@color/Dark"
       app:layout_constraintBottom_toTopOf="@+id/textView"
       android:layout_marginBottom="22dp"
       >

      <ImageView
          android:id="@+id/date_icon"
          android:layout_width="107dp"
          android:layout_height="75dp"
          android:contentDescription="@string/to"
          android:src="@drawable/baseline_date_range_24"
          android:layout_marginTop="12dp"
          android:layout_marginStart="125dp"
          android:layout_marginEnd="16dp"
          />

      <TextView
          android:id="@+id/rs"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/rise"
          android:textColor="@color/white"
          android:textSize="20sp"
          android:textStyle="bold"
          android:layout_marginTop="110dp"
          android:layout_marginStart="120dp"
          />

      <TextView
          android:id="@+id/para"
          android:layout_width="310dp"
          android:layout_height="41dp"
          android:text="@string/todo"
          android:textStyle="italic"
          android:textColor="@color/white"
          android:layout_marginTop="160dp"
          android:layout_marginStart="70dp"
          />

   </androidx.cardview.widget.CardView>


   <TextView
       android:id="@+id/textView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/pending_"
       app:layout_constraintBottom_toBottomOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       app:layout_constraintHorizontal_bias="0.051"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.355" />

   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rc_view"
       android:layout_marginTop="300dp"
       android:layout_marginStart="20dp"
       android:layout_width="match_parent"
       android:layout_height="100dp"
       app:layout_constraintTop_toBottomOf="@+id/textView"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0"
       />



   <TextView
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/completed_i"
       app:layout_constraintTop_toBottomOf="@+id/rc_view"
       app:layout_constraintStart_toStartOf="parent"
       android:layout_marginTop="20dp"
       android:layout_marginStart="20dp"
       android:id="@+id/complete_task"/>


   <androidx.recyclerview.widget.RecyclerView
       android:id="@+id/rc_view1"
       android:layout_marginTop="460dp"
       android:layout_marginStart="20dp"
       android:layout_width="match_parent"
       android:layout_height="100dp"
       app:layout_constraintHorizontal_bias="1.0"
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.0"
       />


</androidx.constraintlayout.widget.ConstraintLayout>





